; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/core/extr_mad.c_init_mad_queue.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/core/extr_mad.c_init_mad_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_mad_qp_info = type { i32 }
%struct.ib_mad_queue = type { i32, i32, i64, %struct.ib_mad_qp_info* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ib_mad_qp_info*, %struct.ib_mad_queue*)* @init_mad_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_mad_queue(%struct.ib_mad_qp_info* %0, %struct.ib_mad_queue* %1) #0 {
  %3 = alloca %struct.ib_mad_qp_info*, align 8
  %4 = alloca %struct.ib_mad_queue*, align 8
  store %struct.ib_mad_qp_info* %0, %struct.ib_mad_qp_info** %3, align 8
  store %struct.ib_mad_queue* %1, %struct.ib_mad_queue** %4, align 8
  %5 = load %struct.ib_mad_qp_info*, %struct.ib_mad_qp_info** %3, align 8
  %6 = load %struct.ib_mad_queue*, %struct.ib_mad_queue** %4, align 8
  %7 = getelementptr inbounds %struct.ib_mad_queue, %struct.ib_mad_queue* %6, i32 0, i32 3
  store %struct.ib_mad_qp_info* %5, %struct.ib_mad_qp_info** %7, align 8
  %8 = load %struct.ib_mad_queue*, %struct.ib_mad_queue** %4, align 8
  %9 = getelementptr inbounds %struct.ib_mad_queue, %struct.ib_mad_queue* %8, i32 0, i32 2
  store i64 0, i64* %9, align 8
  %10 = load %struct.ib_mad_queue*, %struct.ib_mad_queue** %4, align 8
  %11 = getelementptr inbounds %struct.ib_mad_queue, %struct.ib_mad_queue* %10, i32 0, i32 1
  %12 = call i32 @spin_lock_init(i32* %11)
  %13 = load %struct.ib_mad_queue*, %struct.ib_mad_queue** %4, align 8
  %14 = getelementptr inbounds %struct.ib_mad_queue, %struct.ib_mad_queue* %13, i32 0, i32 0
  %15 = call i32 @INIT_LIST_HEAD(i32* %14)
  ret void
}

declare dso_local i32 @spin_lock_init(i32*) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
